--- a/.browse/.browse/global.ini
+++ b/.browse/.browse/global.ini
@@ -1,26 +1,63 @@
-;json or xml ? hm... ini
+SEARCH = research 
+TAGS   = tags
+TITLE  = title
+FETCH  = fetch
+COUNT  = count
+TERM   = term
+DELETE = delete
+LAYOUT_E = lotype
+LAYOUT_F = lofile
 
 [ROOT]
 TAGS = movie tv
-RENDERER = .browse/root_layout.php
+RENDERER = .browse/root/renderer.php
+SITE      = .browse/root/page.htm
+STYLE     = .browse/root/style.css
+FX_LOGO   =
+FX_COVER  = 
+FX_CAST   =
+FX_WPAPER =
+IMAGES    = images
 EXCLUDE  = $RECYCLE.BIN
 ;PATHS = title|name.title|name.group.title
 ;CHARSET = utf8
 ;NAME_TAGS = logo
-; todo:
-; release - official grouping of media
-; container - custom grouping of media
+; release: official grouping of media
+; shelves: custom grouping of media
+SITE_TITLE = Media-Browser
 [SETUP]
-RENDERER= .browse/setup_layout.php
-IMAGES   = images
-EXCLUDE  =
-[FOLDER]
-RENDERER = .browse/folder_layout.php
-RENDERER2= .browse/setup_layout.php
-IMAGES   = images
-;todo:COVER_PREFIX
+RENDERER  = .browse/setup/renderer.php
+SITE      = .browse/setup/page.htm
+STYLE     = .browse/setup/style.css
+FX_LOGO   = .browse/images/fx_logo.png
+FX_COVER  = 
+FX_CAST   = .browse/images/fx_cast.jpg
+FX_WPAPER = .browse/images/fx_wallpaper.png
+IMAGES    = images
+EXCLUDE   =
+MIRROR    = .browse
+LOGO      = logo
+COVER     = cover
+CAST      = cast
+WPAPER    = wallpaper
+FX = fx_
 FX_COVER = fx_cover_
-EXCLUDE  =
+FX_PATH = .file
+PREVIEW_MAX_WIDTH = 256
+PREVIEW_MAX_HEIGHT = 256
+PREVIEW_BG_COLOR = 175 175 175
+SITE_TITLE = Media-Browser-Setup
+[FOLDER]
+RENDERER = .browse/folder/renderer.php
+IMAGES   = images
+SITE      = .browse/folder/page.htm
+STYLE     = .browse/folder/style.css
+FX_LOGO   = .browse/images/fx_logo.png
+FX_COVER  = 
+FX_CAST   = .browse/images/fx_cast.jpg
+FX_WPAPER = .browse/images/fx_wallpaper.png
+EXCLUDE   =
+SITE_TITLE = Media-Browser
 ;tags = front_cover poster
 ;name_convent="^S[\d]{2}$"
 ;file_convent="^(E[\d]{2})\s(.*)\.(mp4|mkv|avi|flv)$"
@@ -36,10 +73,10 @@ LAUNCH = "(mp4|avi|mkv|flv|swf|mpeg|mpg|ogg|divx|m3u|mp3)$"
 ;name_convent = "^(.*)\s?(\(\d\d\d\d\))\.(mp4|mkv|avi|flv)$"
 ;tags = poster
 [UTIL]
-SEARCH = .browse/search.php
+SEARCH_FILE   = .browse/search.php
 SEARCH_SERVER = yahoo
-[REQUEST]
-SEARCH = research 
-TAGS   = tags
-TITLE  = title
-FETCH  = fetch
+[RENDERER]
+JPG = addImage
+PNG = addImage
+GIF = addImage
+BMP = addImage
