--- a/.browse/.browse/global.ini
+++ b/.browse/.browse/global.ini
@@ -1,16 +1,15 @@
-SEARCH = research 
-TAGS   = tags
-TITLE  = title
-FETCH  = fetch
-COUNT  = count
-TERM   = term
-DELETE = delete
+SEARCH   = research 
+TAGS     = tags
+TITLE    = title
+FETCH    = fetch
+COUNT    = count
+TERM     = term
+DELETE   = delete
 LAYOUT_E = lotype
 LAYOUT_F = lofile
-
 [ROOT]
 TAGS = movie tv
-RENDERER = .browse/root/renderer.php
+RENDERER  = .browse/root/renderer.php
 SITE      = .browse/root/page.htm
 STYLE     = .browse/root/style.css
 FX_LOGO   =
@@ -18,13 +17,13 @@ FX_COVER  =
 FX_CAST   =
 FX_WPAPER =
 IMAGES    = images
-EXCLUDE  = $RECYCLE.BIN
+EXCLUDE   = $RECYCLE.BIN
 ;PATHS = title|name.title|name.group.title
 ;CHARSET = utf8
 ;NAME_TAGS = logo
 ; release: official grouping of media
 ; shelves: custom grouping of media
-SITE_TITLE = Media-Browser
+SITE_TITLE= Media-Browser
 [SETUP]
 RENDERER  = .browse/setup/renderer.php
 SITE      = .browse/setup/page.htm
@@ -40,13 +39,12 @@ LOGO      = logo
 COVER     = cover
 CAST      = cast
 WPAPER    = wallpaper
-FX = fx_
-FX_COVER = fx_cover_
-FX_PATH = .file
+FX        = fx_
 PREVIEW_MAX_WIDTH = 256
 PREVIEW_MAX_HEIGHT = 256
 PREVIEW_BG_COLOR = 175 175 175
 SITE_TITLE = Media-Browser-Setup
+FETCH_LOG = fetch.log
 [FOLDER]
 RENDERER = .browse/folder/renderer.php
 IMAGES   = images
