--- a/.browse/.browse/global.ini
+++ b/.browse/.browse/global.ini
@@ -9,6 +9,8 @@ LAYOUT_E = lotype
 LAYOUT_F = lofile
 [ROOT]
 TAGS = movie tv
+TAGS_FILE = poster
+TAGS_FOLDER=logo
 RENDERER  = .browse/root/renderer.php
 SITE      = .browse/root/page.htm
 STYLE     = .browse/root/style.css
