--- a/.browse/.browse/global.ini
+++ b/.browse/.browse/global.ini
@@ -19,7 +19,7 @@ FX_COVER = ""
 FX_CAST = ""
 FX_WPAPER = ""
 IMAGES = "images"
-EXCLUDE = "$RECYCLE.BIN"
+EXCLUDE = "$RECYCLE.BIN	System Volume Information"
 SITE_TITLE = "Media-Browser"
 [SETUP]
 RENDERER = ".browse/setup/renderer.php"
@@ -30,6 +30,7 @@ FX_COVER = ""
 FX_CAST = ".browse/images/fx_cast.jpg"
 FX_WPAPER = ".browse/images/fx_wallpaper.png"
 IMAGES = "images"
+CURRENT = "current"
 EXCLUDE = ""
 MIRROR = ".browse"
 LOGO = "logo"
