--- a/.browse/.browse/global.ini
+++ b/.browse/.browse/global.ini
@@ -7,28 +7,31 @@ TERM = "term"
 DELETE = "delete"
 LAYOUT_E = "lotype"
 LAYOUT_F = "lofile"
+MR_FILE = "mirror_fifo"
+MR_LABEL= "mirror_name"
+MKDIR = "mkdir"
 [ROOT]
 TAGS = "movie tv"
 TAGS_FILE = "poster"
 TAGS_FOLDER = "logo"
-RENDERER = ".browse/root/renderer.php"
-SITE = ".browse/root/page.htm"
-STYLE = ".browse/root/style.css"
+RENDERER = ".browse/.browse/root/renderer.php"
+SITE     = ".browse/.browse/root/page.htm"
+STYLE    = ".browse/.browse/root/style.css"
 FX_LOGO = ""
 FX_COVER = ""
 FX_CAST = ""
 FX_WPAPER = ""
 IMAGES = "images"
-EXCLUDE = "$RECYCLE.BIN	System Volume Information"
+EXCLUDE = "$RECYCLE.BIN	System Volume Information	index.php"
 SITE_TITLE = "Media-Browser"
 [SETUP]
-RENDERER = ".browse/setup/renderer.php"
-SITE = ".browse/setup/page.htm"
-STYLE = ".browse/setup/style.css"
-FX_LOGO = ".browse/images/fx_logo.png"
+RENDERER = ".browse/.browse/setup/renderer.php"
+SITE     = ".browse/.browse/setup/page.htm"
+STYLE    = ".browse/.browse/setup/style.css"
+FX_LOGO  = ".browse/.browse/images/fx_logo.png"
+FX_CAST  = ".browse/.browse/images/fx_cast.jpg"
+FX_WPAPER= ".browse/.browse/images/fx_wallpaper.png"
 FX_COVER = ""
-FX_CAST = ".browse/images/fx_cast.jpg"
-FX_WPAPER = ".browse/images/fx_wallpaper.png"
 IMAGES = "images"
 CURRENT = "current"
 EXCLUDE = ""
@@ -37,20 +40,19 @@ LOGO = "logo"
 COVER = "cover"
 CAST = "cast"
 WPAPER = "wallpaper"
-FX = "fx_"
 PREVIEW_MAX_WIDTH = "256"
 PREVIEW_MAX_HEIGHT = "256"
 PREVIEW_BG_COLOR = "175 175 175"
 SITE_TITLE = "Media-Browser-Setup"
 FETCH_LOG = "fetch.log"
 [FOLDER]
-RENDERER = ".browse/folder/renderer.php"
-SITE = ".browse/folder/page.htm"
-STYLE = ".browse/folder/style.css"
-FX_LOGO = ".browse/images/fx_logo.png"
+RENDERER = ".browse/.browse/folder/renderer.php"
+SITE     = ".browse/.browse/folder/page.htm"
+STYLE    = ".browse/.browse/folder/style.css"
+FX_LOGO  = ".browse/.browse/images/fx_logo.png"
+FX_CAST  = ".browse/.browse/images/fx_cast.jpg"
+FX_WPAPER= ".browse/.browse/images/fx_wallpaper.png"
 FX_COVER = ""
-FX_CAST = ".browse/images/fx_cast.jpg"
-FX_WPAPER = ".browse/images/fx_wallpaper.png"
 EXCLUDE = ""
 SITE_TITLE = "Media-Browser"
 [FILE]
@@ -59,7 +61,7 @@ WATCH_LOG = "watch.log"
 LAUNCH = "(mp4|avi|mkv|flv|swf|mpeg|mpg|ogg|divx|m3u|mp3)$"
 ICON_EXT = "png"
 [UTIL]
-SEARCH_FILE = ".browse/search.php"
+SEARCH_FILE = ".browse/.browse/search.php"
 SEARCH_SERVER = "yahoo"
 [RENDERER]
 JPG = "addImage"
